# tb64-c

./: .clang-format  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: dev-mode.cmake  install-rules.cmake
include/: base64.h  box.h  clip.h  magic.h
source/: box.c  clip.c  safe.c  tb64.c
source/include/: base64.h  box.h  safe.h
src/: base64.c  box.c  clip.c  tb64.c
